<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GuessNum">

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GuessNumInfo1"
        android:textColor="#F44336"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewGameCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GuessNumGameCount"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GuessNumStart" />
    </LinearLayout>

    <TextView
        android:id="@+id/info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GuessNumInfo2"
        android:textColor="#009688"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:maxLength="4" />

        <Button
            android:id="@+id/btn_SEND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Send"
            android:visibility="invisible" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GuessNumGameinfo3"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/GuessNumRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GuessRule" />

</LinearLayout>